logs/2023-12-04-14-42-36/serverbuild.log
main.c: In function ‘handler_msg’:
main.c:18:23: warning: passing argument 1 of ‘ftpserver_process’ makes integer from pointer without a cast [-Wint-conversion]
   18 |     ftpserver_process(session);
      |                       ^~~~~~~
      |                       |
      |                       UserSession *
In file included from main.c:1:
ftpServer.h:15:28: note: expected ‘int’ but argument is of type ‘UserSession *’
   15 | void ftpserver_process(int sock_ctl);
      |                        ~~~~^~~~~~~~
main.c:19:18: error: ‘UserSession’ has no member named ‘sock’
   19 |     close(session->sock);
      |                  ^~
main.c: In function ‘main’:
main.c:43:16: error: ‘UserSession’ has no member named ‘sock’
   43 |         session->sock = connf;
      |                ^~
ftpServer.c:72:24: error: unknown type name ‘UserSession’
   72 | void ftpserver_process(UserSession *session)
      |                        ^~~~~~~~~~~
ftpServer.c: In function ‘ftpserver_login’:
ftpServer.c:208:16: error: ‘UserName’ undeclared (first use in this function)
  208 |         strcpy(UserName, user);//将用户名存入全局变量用作访问控制
      |                ^~~~~~~~
ftpServer.c:208:16: note: each undeclared identifier is reported only once for each function it appears in
ftpServer.c: In function ‘ftpserver_check_user’:
ftpServer.c:242:33: warning: passing argument 2 of ‘getline’ from incompatible pointer type [-Wincompatible-pointer-types]
  242 |         while(-1!=getline(&line,&len,fd))
      |                                 ^~~~
      |                                 |
      |                                 int *
In file included from ../common/common.h:13,
                 from ftpServer.h:4,
                 from ftpServer.c:11:
/usr/include/stdio.h:646:46: note: expected ‘size_t * restrict’ {aka ‘long unsigned int * restrict’} but argument is of type ‘int *’
  646 |                           size_t *__restrict __n,
      |                           ~~~~~~~~~~~~~~~~~~~^~~
ftpServer.c: In function ‘ftpserver_list’:
ftpServer.c:322:25: error: ‘FTP_PATH’ undeclared (first use in this function)
  322 |         strcpy(aclfile, FTP_PATH);
      |                         ^~~~~~~~
ftpServer.c:326:30: error: ‘UserName’ undeclared (first use in this function)
  326 |         if(check_permissions(UserName, "LIST", aclfile) == 0)
      |                              ^~~~~~~~
ftpServer.c:348:9: warning: implicit declaration of function ‘sendfile’ [-Wimplicit-function-declaration]
  348 |         sendfile(sock_data,fd,NULL,size);
      |         ^~~~~~~~
